Add dump-db command and related test classes